# ai-biodome

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  history.c  history.h  http_server.c  http_server.h  idf_component.yml  led_indicator.c  led_indicator.h  main.c  nvs_storage.c  nvs_storage.h  relays.c  relays.h  scheduler.c  scheduler.h  sensors.c  sensors.h  webpage.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
